# Qt_Cards

./: .gitignore  CMakeLists.txt  Card.cpp  CardDeck.cpp  CardDeck.h  CardHand.cpp  CardHand.h  card.cpp  card.h  card_pics.h  carddeck.cpp  carddeck.h  cardhand.cpp  cardhand.h  main.cpp
